// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LiveshoppingWidget /> should not render the widget without any data 1`] = `""`;

exports[`<LiveshoppingWidget /> should render the widget with a slider for multiple products 1`] = `
<div
  className={
    Object {
      "data-css-1rjsvq5": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ProductListTypeProvider
    meta={null}
    subType="widgets"
    type="liveshopping"
  >
    <Swiper
      additionalModules={null}
      aria-hidden={false}
      autoPlay={false}
      className={null}
      classNames={Object {}}
      controls={false}
      disabled={false}
      indicators={true}
      interval={3000}
      loop={true}
      maxIndicators={null}
      onBreakpoint={null}
      onSlideChange={null}
      paginationType={null}
    >
      <SwiperSlide
        className={null}
        key="1234"
      >
        <ProductListEntryProvider
          productId="1234"
        >
          <LiveshoppingItem
            hasPagination={true}
            productId="1234"
          />
        </ProductListEntryProvider>
      </SwiperSlide>
      <SwiperSlide
        className={null}
        key="1235"
      >
        <ProductListEntryProvider
          productId="1235"
        >
          <LiveshoppingItem
            hasPagination={true}
            productId="1235"
          />
        </ProductListEntryProvider>
      </SwiperSlide>
    </Swiper>
  </ProductListTypeProvider>
</div>
`;

exports[`<LiveshoppingWidget /> should render the widget with no slider for one product 1`] = `
<div
  className={
    Object {
      "data-css-1rjsvq5": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ProductListTypeProvider
    meta={null}
    subType="widgets"
    type="liveshopping"
  >
    <ProductListEntryProvider
      key="1234"
      productId="1234"
    >
      <LiveshoppingItem
        hasPagination={false}
        productId="1234"
      />
    </ProductListEntryProvider>
  </ProductListTypeProvider>
</div>
`;
